--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: swift
 osx_image: xcode12.2
 xcode_project: AKMaskField.xcodeproj
 xcode_scheme: AKMaskFieldTests
-xcode_destination: platform=iOS Simulator,OS=12.0,name=iPhone X
+xcode_destination: platform=iOS Simulator,OS=14.2,name=iPhone 12
