--- a/AKMaskField.xcodeproj/xcshareddata/xcschemes/AKMaskFieldTests.xcscheme
+++ b/AKMaskField.xcodeproj/xcshareddata/xcschemes/AKMaskFieldTests.xcscheme
@@ -34,6 +34,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "01959A151DF1BA7700C9E359"
+            BuildableName = "AKMaskFieldExample.app"
+            BlueprintName = "AKMaskFieldExample"
+            ReferencedContainer = "container:AKMaskField.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -41,6 +51,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "01959A151DF1BA7700C9E359"
+            BuildableName = "AKMaskFieldExample.app"
+            BlueprintName = "AKMaskFieldExample"
+            ReferencedContainer = "container:AKMaskField.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
